--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,13 @@
   <title>Menú Dinámico</title>
 </head>
 <body>
-  <nav id="menu"></nav>
+  <nav id="menu">
+  <p>
+  "Hola"
+    
+  </p>
+    
+  </nav>
   <script src="script.js"></script>
 </body>
 </html>
